[package]
name = "kbo"
version = "0.3.0"
edition = "2021"
rust-version = "1.77.0"
authors = ["Tommi Mäklin <tommi@maklin.fi>"]
description = "Spectral Burrows-Wheeler transform accelerated local alignment search"
readme = "README.md"
homepage = "https://github.com/tmaklin/kbo"
repository = "https://github.com/tmaklin/kbo"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cli = ["dep:needletail", "dep:clap", "dep:rayon", "dep:log", "dep:stderrlog"]

[[bin]]
name = "kbo"
path = "src/cli/main.rs"
required-features = ["cli"]

[dependencies]
## core
sbwt = "0.3.4"

## cli
clap = { version = "4", features = ["derive"], optional = true}

### io
needletail = { version = "0.6.0", default-features = false, features = ["flate2"], optional = true }

### logging
log = { version = "0.4.20", optional = true }
stderrlog = { version = "0.6.0", optional = true }

### threading
rayon = { version = "1", optional = true }

## docs
embed-doc-image="0.1.4"

[dev-dependencies]
## tests
assert_approx_eq = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
