[package]
name = "kbo"
version = "0.4.2"
edition = "2021"
rust-version = "1.77.0"
authors = ["Tommi Mäklin <tommi@maklin.fi>"]
description = "Spectral Burrows-Wheeler transform accelerated local alignment search"
readme = "README.md"
homepage = "https://github.com/tmaklin/kbo"
repository = "https://github.com/tmaklin/kbo"
license = "MIT OR Apache-2.0"

[dependencies]
## core
sbwt = { version = "0.3.4", features = ["bpks-mem"] }

## docs
embed-doc-image="0.1.4"
random = "0.14.0" # This is also used in tests

[dev-dependencies]
## tests
assert_approx_eq = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
