[package]
name = "kbo"
version = "0.5.0"
edition = "2021"
rust-version = "1.77.0"
authors = [
    "Tommi Mäklin <tommi@maklin.fi>",
    "Jarno N. Alanko <alanko.jarno@gmail.com>"
]
description = "Local alignment search with k-bounded matching statistics."
readme = "README.md"
homepage = "https://github.com/tmaklin/kbo"
repository = "https://github.com/tmaklin/kbo"
license = "MIT OR Apache-2.0"

[dependencies]
## core
sbwt = { version = "0.3.4", features = ["bpks-mem"] }

## docs
embed-doc-image="0.1.4"

[dev-dependencies]
## tests
assert_approx_eq = "1"
random = "0.14.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
